--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pranay Panchal - Personal Portfolio Website Template" />
+    <meta name="description" content="Destination Explorer - Explore The World" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="willy wonka" />
     <title>Destination Explorer - Explore The World</title>
@@ -463,6 +463,7 @@
         <div class="blog-header"> Explore</span>
             <span class ="header-caption">Choose the continent that<span class="color"> you want.</span></span></div>
             <div class="blog-content">
+				<center><h1>Website In Progress</h1></center>
                  <div class="blogs">
                      <a href="#">
                      <div class="img">
