--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 					Body : "From: "+document.getElementById("email").value
 						+"<br> Messaage: "+document.getElementById("body").value,
 					}).then(
-					message => alert(message)
+					message => alert("Sent success")
 					);
 				}
 			</script>		
