--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 					From : 'pranay.ali118@gmail.com',
 					Subject : "Subject:"+document.getElementById("subject").value,
 					Body : +"Name:"+document.getElementById("name").value
-"From: "+document.getElementById("email").value
++"From: "+document.getElementById("email").value
 						+"<br> Messaage: "+document.getElementById("body").value,
 					}).then(
 					message => alert("Sent success")
