--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 					To : 'pranay.ali118@gmail.com',
 					From : 'pranay.ali118@gmail.com',
 					Subject : "Subject:"+document.getElementById("subject").value,
-					Body : +"Name:"+document.getElementById("name").value
+					Body : "Name: "+document.getElementById("name").value
 +"<br> From: "+document.getElementById("email").value
 						+"<br> Messaage: "+document.getElementById("body").value,
 					}).then(
