--- a/Continents/AustralliaOceania/Destination Explorer - AustralliaOceania.html
+++ b/Continents/AustralliaOceania/Destination Explorer - AustralliaOceania.html
@@ -10,6 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
 </head>
 <body>
+<!--loader-->
+    <div id="loader">
+        <span class="color">Destination </span>Explorer 
+    </div>
+<!--loader-end-->
 <!--mouse  follower-->
 	<div class="cursor"></div>
 <!--mouse  follower-->
