--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 			<center><h1>Website In Progress</h1></center>
 			<div class="searchbar">
 			<center>
-			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search For Places..." title="Type in a name">
 			<ul id="myUL">
 			<li><a href="Continents\Asia\Destination Explorer - Asia.html" target="_blank">Asia</a></li>
 			<li><a href="Continents\Africa\Destination Explorer - Africa.html" target="_blank">Africa</a></li>
