Added 3d Models Of 7Wonders

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 						 The Mughal Emperor Shah Jahan dearly loved his third wife who died during child birth.
 						 So, he decided and commissioned a grand and beautiful monument that is preserved for centuries.
 						 He made the monument in love of his wife. This is the reason why the Taj Mahal earned such a world famous title called Symbol of Love.</p>
-                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                         <div class="button"><a href="https://sketchfab.com/models/33149233cefd492b9abdd50fe5a8c921/embed?autostart=1&internal=1&tracking=0&ui_infos=0&ui_snapshots=1&ui_stop=0&ui_watermark=0" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div>
                  </div>
                  <div class="portfolio portfolio-second">
@@ -359,7 +359,7 @@
                         <h2>Colosseum</h2>
                         <p>The arena once witnessed bloody gladiator battles, epic hunts pitting humans against wild animals, and gruesome executions of prisoners of war and criminals.
 						If you’re visiting soon and want to impress your friends and family here you’ll find many interesting Roman Colosseum facts.</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <div class="button"><a href="https://sketchfab.com/models/544c64b6445e4899a17350c949b7766a/embed?autostart=1&internal=1&tracking=0&ui_infos=0&ui_snapshots=1&ui_stop=0&ui_watermark=0" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
              
@@ -372,7 +372,7 @@
                         <p>Chichén Itzá is an ancient Mayan city in the Yucatan peninsula of Mexico.
 						The Mayan people built the city in the architectural style of Puuc around 250 AD to 900 AD – this is long before the Aztec period which was 1300 to 1521.
 						It’s one of the largest Mayan cities ever built and occupies an area of 4 square miles (10 square km). At its peak, some 35,000 people would have called it home.</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <div class="button"><a href="https://sketchfab.com/models/fac3d1e9f5cf4b47b54a460e63abf1b5/embed?autostart=1&internal=1&tracking=0&ui_infos=0&ui_snapshots=1&ui_stop=0&ui_watermark=0" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
                 <div class="portfolio portfolio-fourth">
@@ -383,7 +383,7 @@
                         <h2>Machu Picchu</h2>
                         <p>Machu Picchu means “old mountain” in the Quechua language, the native language of the Incas.
 						The Incas were the largest civilization in South America around 600 years ago, before the arrival of the Spanish conquistadors.</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <div class="button"><a href="https://sketchfab.com/models/eb2e2c36ba8a4d8197dc30dd947984d2/embed?autostart=1&internal=1&tracking=0&ui_infos=0&ui_snapshots=1&ui_stop=0&ui_watermark=0" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
 				 <div class="portfolio portfolio-fifth">
@@ -394,7 +394,7 @@
                         <h2>Christ The Redeemer</h2>
                         <p>Christ the Redeemer was built using reinforced concrete and has an outer shell of 6 million soapstone tiles.
 						It’s believed that the workers who made these tiles occasionally wrote notes on the back, meaning this iconic landmark is full of hidden messages.</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <div class="button"><a href="https://sketchfab.com/models/e594e0fd1cdb4031aedb815cc48069c8/embed?autostart=1&internal=1&tracking=0&ui_infos=0&ui_snapshots=1&ui_stop=0&ui_watermark=0" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
 				 <div class="portfolio portfolio-sixth">
@@ -405,7 +405,7 @@
                         <h2>Petra</h2>
                         <p>Petra is an important part of Jordan’s cultural heritage, and features on most travel bucket lists – with good reason! With intricately carved monuments, 
 						labyrinthine passageways and a mysterious history, this ancient city remains one of the most beautiful and enigmatic places in the Middle East.</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <div class="button"><a href="https://sketchfab.com/models/39ef0f6c82224860ad49039d2534046d/embed?autostart=1&internal=1&tracking=0&ui_infos=0&ui_snapshots=1&ui_stop=0&ui_watermark=0" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
 				 <div class="portfolio portfolio-seventh">
@@ -417,7 +417,7 @@
                         <p>The one thing most people “know” about the Great Wall of China—that it is one of the only man-made structures visible from space—is not actually true. Since the wall looks a lot like the stone and soil that surround it, 
 						it is difficult to discern with the human eye even from low Earth orbit, and is difficult to make out in most orbital photos.
 						However, this does not detract from the wonder of this astounding ancient structure.</p>
-                        <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
+                        <div class="button"><a href="https://sketchfab.com/models/eb94be2c56a14f009e6f0f2533c996d7/embed?autostart=1&internal=1&tracking=0&ui_infos=0&ui_snapshots=1&ui_stop=0&ui_watermark=0" target="_blank"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
                  </div>
