--- a/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
+++ b/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
@@ -49,12 +49,12 @@
         </a>
       </li>
       <li class="nav__item">
-        <a href="#newyork" class="nav__link" data-scroll-to>
+        <a href="#Goa" class="nav__link" data-scroll-to>
           <div class="media">
-            <img src="https://lonelyplanetimages.imgix.net/mastheads/GettyImages-538096543_medium.jpg?sharp=10&vib=20&w=2000" alt="" class="media__img">
+            <img src="https://images.pexels.com/photos/237272/pexels-photo-237272.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="media__img">
             <p class="media__content">
-              <strong>New York</strong><br />
-              USA
+              <strong>Goa</strong><br />
+              The southwestern coast of India
             </p>
           </div>
         </a>
@@ -148,9 +148,9 @@
       </div>
     </article>
 
-    <article class="section" id="newyork" data-section>
-      <header class="section__header" style="background-image: url('https://lonelyplanetimages.imgix.net/mastheads/GettyImages-538096543_medium.jpg?sharp=10&vib=20&w=2000');">
-        <h1 class="section__title">New York</h1>
+    <article class="section" id="Goa" data-section>
+      <header class="section__header" style="background-image: url('https://images.pexels.com/photos/237272/pexels-photo-237272.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
+        <h1 class="section__title">Goa</h1>
         <p class="section__subtitle">40.42°N, 74.02°W</p>
 		
       </header>
@@ -163,32 +163,32 @@
           </li>
           <li class="boxgrid__item">
             <a href="#" class="box box--weather">
-              <p><span class="text--large">30°C</span><br />Sunny</p>
+              <p><span class="text--large">30°C</span><br />Average</p>
             </a>
           </li>
           <li class="boxgrid__item boxgrid__item--push">
-            <a href="#" class="box box--video">
-              <img src="https://source.unsplash.com/300x300/?art" class="box__img" alt="" />
+            <a href="https://www.youtube.com/watch?v=cBbS8Pi0obo" target="_blank" class="box box--video">
+              <img src="https://images.pexels.com/photos/753626/pexels-photo-753626.jpeg?auto=compress&cs=tinysrgb&w=1600" class="box__img" alt="" />
             </a>
           </li>
           <li class="boxgrid__item boxgrid__item--push">
             <a href="#" class="box box--image">
-              <img src="https://source.unsplash.com/300x300/?people" class="box__img" alt="" />
+              <img src="https://images.pexels.com/photos/1024960/pexels-photo-1024960.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="box__img" alt="" />
             </a>
           </li>
           <li class="boxgrid__item boxgrid__item--push">
             <a href="#" class="box box--locations">
-              <p><span class="text--large">1.366</span><br />Locations</p>
+              <p><span class="text--large">8,500</span><br />Daily Visitors</p>
             </a>
           </li>
           <li class="boxgrid__item">
             <a href="#" class="box box--cost">
-              <p><span class="text--large">150$</span><br />Daily cost</p>
+              <p><span class="text--large">65$</span><br />Daily cost</p>
             </a>
           </li>
           <li class="boxgrid__item">
             <a href="#" class="box box--image">
-              <img src="https://source.unsplash.com/300x300/?technology" class="box__img" alt="" />
+              <img src="https://images.pexels.com/photos/240526/pexels-photo-240526.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="box__img" alt="" />
             </a>
           </li>
         </ul>
