--- a/Continents/Asia/Destination Explorer - Asia.html
+++ b/Continents/Asia/Destination Explorer - Asia.html
@@ -60,11 +60,11 @@
                     <div class="services-content">
                            <div class="service-one service wow">
                                <div class="service-img">
-                               <img src="images/About-Dev.png" alt="service-one">
+                               <img src="Countries/India/images/Thumbnail-India.jpg" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <a href="#" style="text-decoration:none; color:white" target="_blank"><h2>Place1</h2></a>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
+                                <a href="Countries/India/Destination Explorer - Asia - India.html" style="text-decoration:none; color:white" target="_blank"><h2>India</h2></a>
+                                <p>India tourism with its foggy hill stations, captivating beaches, historical monuments, golden deserts, serene backwaters, pilgrimage sites, rich wildlife.</p>
                                </div>
                            </div>
                            <div class="service-two service wow">
