--- a/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
+++ b/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
@@ -204,13 +204,13 @@
   </button>
   
   <footer class="footer">
-    <p>a pen by <a href="https://twitter.com/mxbck">@mxbck</a></p>
-    <p>design by <a href="https://dribbble.com/shots/2652364-Digital-Walls">Cosmin Capitanu</a></p>
+    <p>a pen by <a href="https://www.instagram.com/iampateldev/">Dev Patel</a></p>
+    <p>design by <a href="https://www.instagram.com/pranaypanchalofficial/" target="_blank">Pranay Panchal</a></p>
     
     <p class="footer__more">
-      <a href="https://codepen.io/mxbck/pen/81020404c9d5fd873a717c4612c914dd?editors=1000" target="_blank" rel="noopener noreferrer">View Source</a>
+      <a href="https://github.com/pranaypanchalofficial/destinationexplorer/blob/main/Continents/Asia/Countries/India/Destination%20Explorer%20-%20Asia%20-%20India.html" target="_blank" rel="noopener noreferrer">View Source</a>
       &nbsp;&middot;&nbsp;
-      <a href="https://mxb.at/blog/layouts-of-tomorrow/">Read More</a>
+      <a href="https://mxb.at/blog/layouts-of-tomorrow/" target="_blank">Read More</a>
     </p>
   </footer>
 </div>
