--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
 			<center>
 			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search For Places..." title="Type in a name">
 			<ul id="myUL">
+			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html" target="_blank">India,Asia</a></li>
 			<li><a href="Continents\Asia\Destination Explorer - Asia.html" target="_blank">Asia</a></li>
 			<li><a href="Continents\Africa\Destination Explorer - Africa.html" target="_blank">Africa</a></li>
 			<li><a href="Continents\AustralliaOceania\Destination Explorer - AustralliaOceania.html" target="_blank">Australlia/Oceania</a></li>
