Added Theme Colors In The Places Form

--- a/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
+++ b/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
@@ -13,6 +13,38 @@
 <!--mouse  follower-->
         <div class="cursor"></div>
 <!--mouse  follower-->
+<!--color changer-->
+            <div class="color-changer">
+            <div class="color-panel">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="color-selector">
+                <div class="heading">Custom Colors</div>
+                <div class="colors">
+                    <ul >
+                    <li>
+                        <a href="#0" class="color-red " title="color-red"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-purple" title="color-purple"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-malt" title="color-malt"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-green" title="color-green"></a>-
+                    </li>
+                    <li>
+                        <a href="#0" class="color-blue" title="color-blue"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-orange" title="color-orange"></a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+            </div>
+<!--color changer end-->
 <!-- partial:index.partial.html -->
 <div class="app">
   <header class="header">
