Update Destination Explorer - Asia - India.html

--- a/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
+++ b/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
@@ -242,7 +242,7 @@
     <p class="footer__more">
       <a href="https://github.com/pranaypanchalofficial/destinationexplorer/blob/main/Continents/Asia/Countries/India/Destination%20Explorer%20-%20Asia%20-%20India.html" target="_blank" rel="noopener noreferrer">View Source</a>
       &nbsp;&middot;&nbsp;
-      <a href="https://mxb.at/blog/layouts-of-tomorrow/" target="_blank">Read More</a>
+      <a href="https://github.com/pranaypanchalofficial/destinationexplorer" target="_blank">Read More</a>
     </p>
   </footer>
 </div>
