--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <!--Social Media Links-->
             <div class="social-media-links">
                <a href="https://www.instagram.com/pranaypanchalofficial/" target="_blank"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
-                <a href="#" target="_blank"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
+                <a href="#"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
                 <a href="#"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
                 <a href="#"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
             </div>
