--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Destination Explorer - Explore The World" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
-	<meta name="author" content="willy wonka" />
+	<meta name="author" content="Pranay Panchal" />
     <title>Destination Explorer - Explore The World</title>
   <!--favicon-img--> 
    <link rel="icon" type="image/png" href="images/DE Home Logo.png">
@@ -110,7 +110,7 @@
                 <div class="colors">
                     <ul >
                     <li>
-                        <a href="#0" class="color-red " title="color-red"></a>
+                        <a href="#0" class="color-red" title="color-red"></a>
                     </li>
                     <li>
                         <a href="#0" class="color-purple" title="color-purple"></a>
