--- a/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
+++ b/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
@@ -183,7 +183,7 @@
     <article class="section" id="Goa" data-section>
       <header class="section__header" style="background-image: url('https://images.pexels.com/photos/237272/pexels-photo-237272.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
         <h1 class="section__title">Goa</h1>
-        <p class="section__subtitle">40.42°N, 74.02°W</p>
+        <p class="section__subtitle">15.361255, 74.055158</p>
 		
       </header>
       <div class="section__content">
