--- a/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
+++ b/Continents/Asia/Countries/India/Destination Explorer - Asia - India.html
@@ -236,7 +236,7 @@
   </button>
   
   <footer class="footer">
-    <p>a pen by <a href="https://www.instagram.com/iampateldev/">Dev Patel</a></p>
+    <p>a pen by <a href="https://www.instagram.com/iampateldev/" target="_blank">Dev Patel</a></p>
     <p>design by <a href="https://www.instagram.com/pranaypanchalofficial/" target="_blank">Pranay Panchal</a></p>
     
     <p class="footer__more">
