--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 			<center>
 			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search For Places..." title="Type in a name">
 			<ul id="myUL">
-			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html" target="_blank">India,Asia</a></li>
+			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html">India,Asia</a></li>
 			<li><a href="Continents\Asia\Destination Explorer - Asia.html" target="_blank">Asia</a></li>
 			<li><a href="Continents\Africa\Destination Explorer - Africa.html" target="_blank">Africa</a></li>
 			<li><a href="Continents\AustralliaOceania\Destination Explorer - AustralliaOceania.html" target="_blank">Australlia/Oceania</a></li>
@@ -488,7 +488,7 @@
                         <div class="blog-date">8 Countries to visit</div>
                      </div>
                      <div class="blog-text">
-                         <h3><a href="Continents\Asia\Destination Explorer - Asia.html" target="_blank">Asia</a></h3>
+                         <h3><a href="Continents\Asia\Destination Explorer - Asia.html">Asia</a></h3>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias dolore recusandae illum, corrupti quo 
                              veniam saepe aliquid! Quis voluptates ratione consequuntur vel, perferendis cum provident? Magnam fugiat voluptas
                               libero.</p>
@@ -501,7 +501,7 @@
                         <div class="blog-date">8 Countries to visit</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\Africa\Destination Explorer - Africa.html" target="_blank">Africa</a></h3>
+                        <h3><a href="Continents\Africa\Destination Explorer - Africa.html">Africa</a></h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt maiores, 
                             recusandae cupiditate ducimus a non tempora, architecto obcaecati eaque ipsum assumenda harum dolorum iusto tenetur
                              eius eligendi dolor magnam sit!</p>
@@ -514,7 +514,7 @@
                         <div class="blog-date">30 Nov,19</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\AustralliaOceania\Destination Explorer - AustralliaOceania.html" target="_blank">Australlia/Oceania</h3>
+                        <h3><a href="Continents\AustralliaOceania\Destination Explorer - AustralliaOceania.html">Australlia/Oceania</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo nostrum impedit 
                             ipsam perspiciatis ratione sapiente quasi optio reprehenderit, labore consequuntur suscipit cum quas.
                              Officiis dolorem asperiores, ut necessitatibus quas doloremque?</p>
@@ -527,7 +527,7 @@
                         <div class="blog-date">6 Jul,19</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\Europe\Destination Explorer - Europe.html" target="_blank">Europe<a></h3>
+                        <h3><a href="Continents\Europe\Destination Explorer - Europe.html">Europe<a></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, veniam ratione quam vitae,
                              quibusdam explicabo rem debitis velit ipsa repellat, impedit nulla fuga? Amet corporis praesentium quae.
                               Sed, quibusdam necessitatibus.</p>
@@ -540,7 +540,7 @@
                         <div class="blog-date">1 Jun,19</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\North America\Destination Explorer - North America.html" target="_blank">North America</a></h3>
+                        <h3><a href="Continents\North America\Destination Explorer - North America.html">North America</a></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sunt eum necessitatibus rem 
                             dignissimos nulla mollitia cumque, provident officiis non vitae? Animi aut doloremque illum, soluta hic minus 
                             sint explicabo..</p>
@@ -553,7 +553,7 @@
                         <div class="blog-date">28 Feb,19</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\South America\Destination Explorer - South America.html" target="_blank">South America</a></h3>
+                        <h3><a href="Continents\South America\Destination Explorer - South America.html">South America</a></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora dolorum fuga ratione, unde, 
                             ex quaerat iste numquam nemo nihil nobis rem sint quia recusandae dignissimos quos ut rerum nam.</p>
                     </div></a>
@@ -565,7 +565,7 @@
                         <div class="blog-date">28 Feb,19</div>
                     </div>
                     <div class="blog-text">
-                        <h3><a href="Continents\Antarctica\Destination Explorer - Antarctica.html" target="_blank">Antarctica</a></h3>
+                        <h3><a href="Continents\Antarctica\Destination Explorer - Antarctica.html">Antarctica</a></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora dolorum fuga ratione, unde, 
                             ex quaerat iste numquam nemo nihil nobis rem sint quia recusandae dignissimos quos ut rerum nam.</p>
                     </div></a>
