--- a/Continents/Asia/Destination Explorer - Asia.html
+++ b/Continents/Asia/Destination Explorer - Asia.html
@@ -63,7 +63,7 @@
                                <img src="Countries/India/images/Thumbnail-India.jpg" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <a href="Countries/India/Destination Explorer - Asia - India.html" style="text-decoration:none; color:white" target="_blank"><h2>India</h2></a>
+                                <a href="Countries/India/Destination Explorer - Asia - India.html" style="text-decoration:none; color:white"><h2>India</h2></a>
                                 <p>India tourism with its foggy hill stations, captivating beaches, historical monuments, golden deserts, serene backwaters, pilgrimage sites, rich wildlife.</p>
                                </div>
                            </div>
