--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                <img src="images/About-Dev.png" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <a href="https://www.instagram.com/iampateldev/" style="text-decoration:none; color:white" target="_blank"><h2>Dev Patel</h2></a>
+                                <a href="https://www.instagram.com/iampateldev/" style="color:white" target="_blank"><h2>Dev Patel</h2></a>
                                 <p>Meet Dev, A team member with 2 years of experience</p>
                                </div>
                            </div>
@@ -210,7 +210,7 @@
                                <img src="images/About-Henil.png" alt="service-two">
                                </div>
                                <div class="service-description">
-                                <a href="https://www.instagram.com/_.henil._patel._/" style="text-decoration:none; color:white" target="_blank"><h2>Henil Patel</h2></a>
+                                <a href="https://www.instagram.com/_.henil._patel._/" style="color:white" target="_blank"><h2>Henil Patel</h2></a>
                                 <p>Meet Henil, A team member with 1.5 years of experience</p>
                                </div>
                            </div>
@@ -219,7 +219,7 @@
                                <img src="images/About-Pratham.png" alt="service-three">
                             </div>
                             <div class="service-description">
-                                <a href="https://www.instagram.com/hpratham_786/" style="text-decoration:none; color:white" target="_blank"><h2>Pratham Hingu</h2></a>
+                                <a href="https://www.instagram.com/hpratham_786/" style="color:white" target="_blank"><h2>Pratham Hingu</h2></a>
                                 <p>Meet Pratham, A team member with 1.2 years of experience</p>
                             </div>
                         </div>
