--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 </div>
         <div class="blog-header"> Explore</span>
             <span class ="header-caption">Choose the continent that<span class="color"> you want.</span></span></div>
-			<center><h1>Website In Progress</h1></center>
+			<!--<center><h1>Website In Progress</h1></center>-->
 			<div class="searchbar">
 			<center>
 			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search For Places..." title="Type in a name">
