--- a/index.html
+++ b/index.html
@@ -469,7 +469,10 @@
 			<center>
 			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search For Places..." title="Type in a name">
 			<ul id="myUL">
-			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html">India,Asia</a></li>
+			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html">Gateway Of India, Mumbai, India, Asia</a></li>
+			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html">Goa, India, Asia</a></li>
+			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html">Taj Mahal, Agra, India, Asia</a></li>
+			<li><a href="Continents\Asia\Countries\India\Destination Explorer - Asia - India.html">India, Asia</a></li>
 			<li><a href="Continents\Asia\Destination Explorer - Asia.html" target="_blank">Asia</a></li>
 			<li><a href="Continents\Africa\Destination Explorer - Africa.html" target="_blank">Africa</a></li>
 			<li><a href="Continents\AustralliaOceania\Destination Explorer - AustralliaOceania.html" target="_blank">Australlia/Oceania</a></li>
